force-app/main/default/objects/Account.object
<CustomObject>
    <fields>
        <fullName>CC_on_Mass_Email_Campus_2__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>ISM Krylatskoe UC
BSKL Secondary
BST Upper
BCB Cidade Jardim</inlineHelpText>
        <label>CC on Mass Email Campus 2</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CC_on_Mass_Email_Campus_3__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>ISM Rosinka</inlineHelpText>
        <label>CC on Mass Email Campus 3</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CC_on_Mass_Email_Whole_School__c</fullName>
        <formula>IF (CC_on_Mass_Email_Campus_1__c = TRUE, TRUE,
IF (CC_on_Mass_Email_Campus_2__c = TRUE, TRUE,
IF (CC_on_Mass_Email_Campus_3__c = TRUE, TRUE, FALSE)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CC on Mass Email Whole School</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CC_on_parent_Mass_Emails__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Field to control which staff members will be included on mass emails which will be sent to parents, from the school</description>
        <label>CC on Parent Mass Emails</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Campus__c</fullName>
        <inlineHelpText>Only applicable for schools with multiple campuses</inlineHelpText>
        <label>Campus</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>School_Controlling_Picklist__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Chácara Flora</fullName>
                </value>
                <value>
                    <fullName>Cidade Jardim</fullName>
                </value>
                <value>
                    <fullName>Krylatskoe</fullName>
                </value>
                <value>
                    <fullName>Rosinka</fullName>
                </value>
                <value>
                    <fullName>Lower Campus</fullName>
                </value>
                <value>
                    <fullName>Upper Campus</fullName>
                </value>
                <value>
                    <fullName>Cross-Campus</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Can_Visit_Within_Next_2_Weeks__c</fullName>
        <label>Visit Next 2 Weeks?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Company_CNPJ_ID__c</fullName>
        <description>CNPJ is an important identification number for companies in Brazil which is required before payments can be made to the school.</description>
        <label>Company CNPJ/ID#</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Company_Contact_Person_1_First_Name__c</fullName>
        <label>Contact Person 1 First Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Company_Contact_Person_1_Last_Name__c</fullName>
        <label>Contact Person 1 Last Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Company_Contact_Person_2_First_Name__c</fullName>
        <label>Contact Person 2 First Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Company_Contact_Person_2_Last_Name__c</fullName>
        <label>Contact Person 2 Last Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Company_Department__c</fullName>
        <description>The department of the company in which the person receiving the invoice works</description>
        <label>Department</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Company_Email_2__c</fullName>
        <label>Company Email 2</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Company_Email__c</fullName>
        <label>Company Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Company_Phone_2__c</fullName>
        <label>Company Phone 2</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Company_Phone__c</fullName>
        <label>Company Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Company_School__c</fullName>
        <formula>TEXT(Owner.School__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Company School</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Note__c</fullName>
        <label>General Contact Note</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Contact_UID_P2__c</fullName>
        <formula>Related_Contact_Record_P2__r.Staff_Member_Parent_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact UID (P2)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_UID__c</fullName>
        <description>The UID of the contact used in School Kompanion (BEN 01/06/2017: use of this field will slowly be phased out to be replaced by the external ID in the Staff_Member_Parent_Number__pc field)</description>
        <formula>CASESAFEID(PersonContact.Id)</formula>
        <label>Contact UID (Person Contact)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_Autonumber__c</fullName>
        <description>Used to generate contract number automatically, and used in the workflow that copies this number to the text field.</description>
        <displayFormat>{00000}</displayFormat>
        <label>Contract Autonumber</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Contract_Number__c</fullName>
        <inlineHelpText>Only used for system generated Tuition Contracts</inlineHelpText>
        <label>Contract Number</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CopyAccountId__c</fullName>
        <formula>Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CopyAccountId</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Copy_Account_Name__c</fullName>
        <formula>Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Copy Account Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Copy_Alternate_Email__c</fullName>
        <description>Required so that the alternate email stored on the person account (contact) can be used in email alerts on the account object</description>
        <label>Copy Alternate Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Copy_Owner_ID__c</fullName>
        <formula>OwnerId</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Copy Owner ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Copy_Parent_Passport__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Copy Parent Passport(s)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Copy_Position__c</fullName>
        <formula>IF(TEXT(Position__c)=&quot;Non-UK Qualified Expat Teacher Full Package&quot;,&quot;Teacher&quot;, 

IF(TEXT(Position__c)=&quot;Non-UK Qualified Expat Teacher Partial Package&quot;,&quot;Teacher&quot;, 

IF(TEXT(Position__c)= &quot;Local Teacher&quot;,&quot;Teacher&quot;, 

IF(TEXT(Position__c)=&quot;UK Qualified Teacher Full Package&quot;,&quot;Teacher&quot;, 

IF(TEXT(Position__c)=&quot;UK Qualified Teacher Partial Package&quot;,&quot;Teacher&quot;, 

IF(TEXT(Position__c)=&quot;Expat Teacher Assistant&quot;, &quot;Teacher Assistant&quot;, 

IF(TEXT(Position__c)=&quot;Local Teacher Assistant&quot;,&quot;Teacher Assistant&quot;, 

TEXT(Position__c) 

)))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Copy Position</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Copy_Specialist_Subjects__c</fullName>
        <formula>IF(INCLUDES( Specialist_Subjects__c , &quot;English&quot;), &quot;English &quot;, NULL)&amp; 

IF(INCLUDES( Specialist_Subjects__c , &quot;Maths&quot;), &quot;Maths &quot;, NULL)&amp; 

IF(INCLUDES( Specialist_Subjects__c , &quot;Music&quot;), &quot;Music &quot;, NULL)&amp; 

IF(INCLUDES( Specialist_Subjects__c , &quot;Drama&quot;), &quot;Drama &quot;, NULL)&amp; 

IF(INCLUDES( Specialist_Subjects__c , &quot;Art&quot;), &quot;Art &quot;, NULL)&amp; 

IF(INCLUDES( Specialist_Subjects__c , &quot;ICT&quot;), &quot;ICT &quot;, NULL)&amp; 

IF(INCLUDES( Specialist_Subjects__c , &quot;Humanities&quot;), &quot;Humanities &quot;, NULL)&amp; 

IF(INCLUDES( Specialist_Subjects__c , &quot;Geography&quot;), &quot;Geography &quot;, NULL)&amp; 

IF(INCLUDES( Specialist_Subjects__c , &quot;History&quot;), &quot;History &quot;, NULL)&amp; 

IF(INCLUDES( Specialist_Subjects__c , &quot;General Science&quot;), &quot;General Science &quot;, NULL)&amp; 

IF(INCLUDES( Specialist_Subjects__c , &quot;Biology&quot;), &quot;Biology &quot;, NULL)&amp; 

IF(INCLUDES( Specialist_Subjects__c , &quot;Physics&quot;), &quot;Physics &quot;, NULL)&amp; 

IF(INCLUDES( Specialist_Subjects__c , &quot;Chemistry&quot;), &quot;Chemistry &quot;, NULL)&amp; 

IF(INCLUDES( Specialist_Subjects__c , &quot;Business Studies&quot;), &quot;Business Studies &quot;, NULL)&amp; 

IF(INCLUDES( Specialist_Subjects__c , &quot;Chinese&quot;), &quot;Chinese &quot;, NULL)&amp; 

IF(INCLUDES( Specialist_Subjects__c , &quot;Russian&quot;), &quot;Russian &quot;, NULL)&amp; 

IF(INCLUDES( Specialist_Subjects__c , &quot;Spanish&quot;), &quot;Spanish &quot;, NULL)&amp; 

IF(INCLUDES( Specialist_Subjects__c , &quot;Portuguese&quot;), &quot;Portuguese &quot;, NULL)&amp; 

IF(INCLUDES( Specialist_Subjects__c , &quot;French&quot;), &quot;French &quot;, NULL)&amp; 

IF(INCLUDES( Specialist_Subjects__c , &quot;German&quot;), &quot;German &quot;, NULL)&amp; 

IF(INCLUDES( Specialist_Subjects__c , &quot;Foreign Language&quot;), &quot;Foreign Language &quot;, NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Copy Specialist Subjects</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Copy_Student_Passports__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Copy Student Passport(s)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Count_Active_Contracts__c</fullName>
        <label>Count Active Contracts</label>
        <summarizedField>Employment_Agreement__c.Count_Active__c</summarizedField>
        <summaryForeignKey>Employment_Agreement__c.Staff_Member__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Count_Expired_Contracts__c</fullName>
        <label>Count Expired Contracts</label>
        <summarizedField>Employment_Agreement__c.Count_Expired__c</summarizedField>
        <summaryForeignKey>Employment_Agreement__c.Staff_Member__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Count_Financial_Info_Records__c</fullName>
        <label>Count Financial Info Records</label>
        <summaryForeignKey>Financial_Information__c.Related_to__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Count_Other_Contracts__c</fullName>
        <description>Used only to create a staff member view which shows staff who are &apos;applying&apos;</description>
        <label>Count Other Contracts</label>
        <summarizedField>Employment_Agreement__c.Count_Other_Contracts__c</summarizedField>
        <summaryForeignKey>Employment_Agreement__c.Staff_Member__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Count_Signed_Not_started_Contracts__c</fullName>
        <label>Count Signed Not started Contracts</label>
        <summarizedField>Employment_Agreement__c.Count_Signed_Not_Started__c</summarizedField>
        <summaryForeignKey>Employment_Agreement__c.Staff_Member__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Custom_Email_Filter_Account__c</fullName>
        <label>Custom Email Filter (Account)</label>
        <summaryFilterItems>
            <field>Opportunity.Qualifies_for_Custom_Email_List__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Date_of_Birth__c</fullName>
        <label>Date of Birth</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Default_Days_Off_Approver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Allows school HR to select a specific approver for Days Off requests</description>
        <inlineHelpText>Select a default days off approver for this staff member. Feature currently only available for ISM Academic Staff. Contact your system administrator if you would like to activate this feature for your school.</inlineHelpText>
        <label>Default Days Off Approver</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>User.Authorised_Approver__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <filterItems>
                <field>User.School__c</field>
                <operation>equals</operation>
                <valueField>$Source.School_Controlling_Picklist__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>Days_off_Approver_For</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Deletion_Prevention__c</fullName>
        <formula>/* Future Parents for Time-Based Workflow Trigger */

AND(
    RecordType.DeveloperName = &quot;PersonAccount&quot;, 
    ISBLANK(User__pc), 
    OR(
       Family_Status__c = &quot;In School&quot;, 
       Family_Status__c = &quot;Future Enrolment&quot;
       ), 
    Starting_Date__c &gt; DATE(2018,08,01),
    OR(
       Company_School__c = &quot;The British School Yangon&quot;, 
       Company_School__c = &quot;The King&apos;s School Manila&quot;, 
       Company_School__c = &quot;The International School of Moscow&quot;, 
       Company_School__c = &quot;The British School of Tashkent&quot;
       )
    )

/* Existing Parent Users Needing Credentials */

/*AND(
    RecordType.DeveloperName = &quot;PersonAccount&quot;, 
    NOT(ISBLANK(User__pc)), 
    OR(
       Family_Status__c = &quot;In School&quot;, 
       Family_Status__c = &quot;Future Enrolment&quot;
       ), 
    Starting_Date__c &lt;= TODAY()+30,
    OR(
       Company_School__c = &quot;The British School Yangon&quot;, 
       Company_School__c = &quot;The King&apos;s School Manila&quot;, 
       Company_School__c = &quot;The International School of Moscow&quot;, 
       Company_School__c = &quot;The British School of Tashkent&quot;
       )
    )*/


/* Kompanion Parent Go-Live */

/*AND(
    SchoolText__pc = &quot;The British School of Brasilia&quot;,
    RecordType.DeveloperName = &quot;PersonAccount&quot;,
    Family_Status__c != &quot;Rejected/Terminated&quot;,
    Family_Status__c != &quot;Left&quot;
    )*/

/*OR( 
   TEXT(School_Department__c) = &quot;Administration&quot;, 
   TEXT(School_Department__c) = &quot;Support Staff&quot;, 
   AND( 
       TEXT(School_Department__c) = &quot;Academic&quot;,
       OR(
          TEXT(Position__c) = &quot;Administrative Support&quot;,
          TEXT(Position__c) = &quot;Local Teacher&quot;,
          TEXT(Position__c) = &quot;Local Teacher Assistant&quot;,
          TEXT(Position__c) = &quot;Science Technician&quot;
          )
       ) 
   )*/
    
/* Kompanion Staff Member Export */

/*AND(
    SchoolText__pc = &quot;The British International School of Kuala Lumpur&quot;,
    RecordType.DeveloperName = &quot;Staff_Account&quot;,
    OR(
       AND(
           Max_Leaving_Date__c &gt; DATE(2016,08,01),
           OR(
              Status__c = &quot;Employed&quot;,
              Status__c = &quot;Signed-On&quot;
              )
           ),
       Id = &quot;001D000001ukFL2&quot;,
       Id = &quot;001D000001uml7Y&quot;,
       Id = &quot;001D000001ukI7X&quot;
       )
    )*/
    
/* Related Contact Record Check */

/*AND(
    RecordType.DeveloperName = &quot;PersonAccount&quot;,
    NOT(ISBLANK(Related_Contact_Record_P2__c)),
    Id != Related_Contact_Record_P2__r.Main_Parent_File__r.Id
    )*/

/* Same Family Different Account */

/*AND(
    RecordType.DeveloperName = &quot;PersonAccount&quot;,
    SchoolText__pc != &quot;The British School of Guangzhou&quot;,
    SchoolText__pc != &quot;The British Schools Foundation&quot;,
    SchoolText__pc != &quot;King&apos;s College Beijing&quot;,
    OR(
       PersonEmail != &quot;&quot;,
       Contact_Alternate_Email__pc != &quot;&quot;,
       Account_Main_Email_Formula__c != &quot;&quot;,
       Account_Alternate_Email_Formula__c != &quot;&quot;
       )
    )*/

/* Parent who&apos;ve opted out of email (fields to be deleted) */

/*AND(
    RecordType.DeveloperName = &quot;PersonAccount&quot;,
    OR(
       PersonHasOptedOutOfEmail = TRUE,
       Contact_Alternate_Email_Opt_Out__pc
       )
    )*/


/*OR(
   Parent_Survey_URL_EN_Account__c != Text_Parent_Survey_URL_EN__pc,
   Parent_Survey_URL_ES_Account__c != Text_Parent_Survey_URL_ES__pc,
   Parent_Survey_URL_BR_Account__c != Text_Parent_Survey_URL_BR__pc,
   Parent_Survey_URL_RU_Account__c != Text_Parent_Survey_URL_RU__pc
   )*/</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Deletion Prevention</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Deposit_Paid_Date__c</fullName>
        <label>Deposit Paid Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Edit_Staff_Member_on_EA_Update__c</fullName>
        <description>The value of this field (TRUE or FALSE) will be toggled upon the &apos;Status&apos; of any related employment agreement being changed</description>
        <label>Edit Staff Member on EA Update</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email_1__c</fullName>
        <description>Required so that the main email stored on the person account (contact) can be used in email alerts on the account object</description>
        <label>Copy Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Email_Addresses_to_Include_in_Xero__c</fullName>
        <description>Defines the email addresses to by synced with person contacts under the related Salesforce contact. Apex code checks that emails are not opted out and ensures there are no duplicates.</description>
        <inlineHelpText>Select the email addresses for the emailing of invoices directly from Xero. Note that emails selected will not be synced with Xero if the parent has opted out of email.</inlineHelpText>
        <label>Additional Email Add. to Include in Xero</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Parent 1 Main Email</fullName>
                </value>
                <value>
                    <fullName>Parent 1 Alternate Email</fullName>
                </value>
                <value>
                    <fullName>Parent 2 Main Email</fullName>
                </value>
                <value>
                    <fullName>Parent 2 Alternate Email</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Enquiry_ID__c</fullName>
        <description>Used during conversion to ensure that existing records are not overwritten</description>
        <label>Enquiry ID</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Enrolled_Jaguars_Students_in_Family__c</fullName>
        <label>Enrolled Jaguars Students in Family</label>
        <summaryFilterItems>
            <field>Opportunity.Probability</field>
            <operation>equals</operation>
            <value>100</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Opportunity.House__c</field>
            <operation>equals</operation>
            <value>Jaguars</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Enrolled_Lions_Students_in_Family__c</fullName>
        <label>Enrolled Lions Students in Family</label>
        <summaryFilterItems>
            <field>Opportunity.Probability</field>
            <operation>equals</operation>
            <value>100</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Opportunity.House__c</field>
            <operation>equals</operation>
            <value>Lions</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Enrolled_Normans_Students_in_Family__c</fullName>
        <label>Enrolled Normans Students in Family</label>
        <summaryFilterItems>
            <field>Opportunity.Probability</field>
            <operation>equals</operation>
            <value>100</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Opportunity.House__c</field>
            <operation>equals</operation>
            <value>Normans</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Enrolled_Panthers_Students_in_Family__c</fullName>
        <label>Enrolled Panthers Students in Family</label>
        <summaryFilterItems>
            <field>Opportunity.Probability</field>
            <operation>equals</operation>
            <value>100</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Opportunity.House__c</field>
            <operation>equals</operation>
            <value>Panthers</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Enrolled_Romans_Students_in_Family__c</fullName>
        <label>Enrolled Romans Students in Family</label>
        <summaryFilterItems>
            <field>Opportunity.Probability</field>
            <operation>equals</operation>
            <value>100</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Opportunity.House__c</field>
            <operation>equals</operation>
            <value>Romans</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Enrolled_Saxons_Students_in_Family__c</fullName>
        <label>Enrolled Saxons Students in Family</label>
        <summaryFilterItems>
            <field>Opportunity.Probability</field>
            <operation>equals</operation>
            <value>100</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Opportunity.House__c</field>
            <operation>equals</operation>
            <value>Saxons</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Enrolled_Tigers_Students_in_Family__c</fullName>
        <label>Enrolled Tigers Students in Family</label>
        <summaryFilterItems>
            <field>Opportunity.Probability</field>
            <operation>equals</operation>
            <value>100</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Opportunity.House__c</field>
            <operation>equals</operation>
            <value>Tigers</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Enrolled_Vikings_Students_in_Family__c</fullName>
        <label>Enrolled Vikings Students in Family</label>
        <summaryFilterItems>
            <field>Opportunity.Probability</field>
            <operation>equals</operation>
            <value>100</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Opportunity.House__c</field>
            <operation>equals</operation>
            <value>Vikings</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Enrolled__c</fullName>
        <formula>IF( Percentage_Enrolled__c = 1, &quot;Yes&quot;, 

IF( Percentage_Enrolled__c = 0.8, &quot;Waiting List&quot;,

&quot;No&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Students Enrolled</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Error_Message__c</fullName>
        <label>Error Message</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>External_ID_18_Char__c</fullName>
        <description>The ID of the record in the alternate SFDC org, where applicable.</description>
        <externalId>true</externalId>
        <label>External ID (18 Char)</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>F_Aid_Application_Email_Template__c</fullName>
        <formula>IF(
   SchoolText__pc = &quot;Add school name here&quot;,
   &quot;Add template ID here&quot;,
   &quot;00X6F000001H1qq&quot; /* this is the default template */
   )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>F/Aid Application Email Template</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>F_Aid_Submission_Deadline_Text__c</fullName>
        <formula>CASE( 
     SchoolText__pc, 
     &quot;The British International School of Kuala Lumpur&quot;, &quot;Please submit the Financial Aid Application form before Tuesday, 25th April 2017.&quot;, 
     &quot;The British School of Tashkent&quot;, &quot;Please submit the Financial Aid Application form before Friday, 5th May 2017.&quot;, 
     &quot;&quot; 
     )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>F/Aid Submission Deadline Text</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>F_Info_Bus_Service__c</fullName>
        <defaultValue>false</defaultValue>
        <description>A hidden field which populates when a relevant parent information form is submitted via the website. Is used to update the relevant student record with the same information.</description>
        <label>F/Info Bus Service</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>F_Info_Email_Copy__c</fullName>
        <label>F/Info Email Copy</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>F_Info_Email_Template_Paragraph__c</fullName>
        <formula>IF(
   TEXT(School_Controlling_Picklist__c) = &quot;The British College of Brazil&quot;,
   &quot;Furthermore, we kindly request your cooperation to provide us some information regarding the billing process of your invoices, in accordance with the terms previously discussed and determined on the Educational Service and Food contract.&quot;,
   &quot;To facilitate the creation of invoices we require some additional information from you regarding who will be making payments and how often they will be made.&quot;
   )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>F/Info Email Template Paragraph</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>F_Info_Email_Template__c</fullName>
        <formula>IF(
   TEXT(Preferred_Language_for_Correspondence__c) = &quot;Portuguese&quot;, 
   &quot;00X6F000001H1qQ&quot;,
   &quot;00X6F000001H1qf&quot;
   )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>F/Info Email Template</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>F_Info_Email__c</fullName>
        <formula>IF(Owner.Email_Domain_Extension__c != null, &quot;financial-info&quot;&amp;Owner.Email_Domain_Extension__c , null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>F/Info Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>F_Info_Has_Address__c</fullName>
        <description>Used to prevent an existing address in the proper format being overridden by a &apos;general area&apos; value by not showing that option on the invoicing information form</description>
        <formula>IF(
   OR(
      NOT(ISBLANK(Address_Apartment_Unit_Number__pc)),
      NOT(ISBLANK(Address_Apartment_Condominium_or_Communi__pc)),
      NOT(ISBLANK(Address_House_Building_Number__pc)),
      NOT(ISBLANK(Address_Street_Name__pc)),
      NOT(ISBLANK(Address_Line_2__pc))
      ),
   &quot;Yes&quot;,
   &quot;No&quot;
   )</formula>
        <label>F/Info Has Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>F_Info_Request_Date_Time__c</fullName>
        <description>Record the date/time that the request for financial info email is sent</description>
        <label>F/Info Request Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>F_Info_Request_Status__c</fullName>
        <description>Changes from Not Sent to Pending to Sent to control the sending of the f/info request email</description>
        <label>F/Info Request Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not Sent</fullName>
                    <default>true</default>
                    <label>Not Sent</label>
                </value>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Sent</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>F_Info_Response_Status__c</fullName>
        <description>Via workflow rules, changes to &quot;Awaiting Response&quot; when a financial info form is automatically sent and to &quot;Response Received&quot; when a reply is received in order to control the time based workflow rule which reminds the relevant person to follow up should the form not be completed and returned within the set period of time.</description>
        <label>F/Info Response Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>have not requested</fullName>
                    <default>true</default>
                    <label>have not requested</label>
                </value>
                <value>
                    <fullName>are awaiting the</fullName>
                </value>
                <value>
                    <fullName>have already received</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>F_Info_Thank_You_Page_Logo_URL__c</fullName>
        <formula>IF(SchoolText__pc = &quot;The New York International School&quot;, &quot;https://c.ap4.content.force.com/servlet/servlet.ImageServer?id=0156F00000EyWvl&quot;, 
&quot;https://c.ap4.content.force.com/servlet/servlet.ImageServer?id=0156F00000EyWve&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Form Thank You Page Logo URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Failed_to_Update_Xero_Id__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Failed to Update Xero Id</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Family_Doesn_t_Receive_Email__c</fullName>
        <formula>IF(AND(OR(PersonEmail = &quot;&quot;,  PersonHasOptedOutOfEmail = TRUE), 
OR(Contact_Alternate_Email__pc = &quot;&quot;, Contact_Alternate_Email_Opt_Out__pc = TRUE), OR(Account_Main_Email_Formula__c = &quot;&quot;, Account_Email_Opt_Out_Formula__c = TRUE), OR(Account_Alternate_Email_Formula__c = &quot;&quot;, Account_Alternate_Email_Opt_Out_Formula__c = TRUE)), TRUE, FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Family Doesn&apos;t Receive Email</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Family_Name__c</fullName>
        <description>The field that defines the name of the family in School Kompanion, relevant to the family UID</description>
        <formula>LastName</formula>
        <label>Family Name</label>
        <type>Text</type>
    </fields>
</CustomObject>